fixed text align and cors

--- a/client/irenic/src/components/scss/Login.scss
+++ b/client/irenic/src/components/scss/Login.scss
@@ -30,7 +30,7 @@
 
     p {
         width: 100%;
-        text-align: left;
+        text-align: center;
         font-size: .9rem;
         color: rgba(255, 0, 0, 0.5);
     }
